<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="20dp"
                android:text="@string/avisos_title"/>

            <TextView
                android:id="@+id/avisos_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/escenarios_title"
                />

            <TextView
                android:id="@+id/scenarios_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/official_docs"
                android:onClick="openOfficialDocs"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/toolbar_shadow" />

</RelativeLayout>